@@ -1,3 +1,7 @@
+2019-07-05  Pierre-Marie de Rodat  <derodat@adacore.com>
+
+	* libgnat/a-strfix.ads: Import documentation from the RM
+
 2019-07-05  Yannick Moy  <moy@adacore.com>
 
 	* adabkend.adb (Scan_Back_End_Switches): Accept -Og and -Ofast
